[gd_scene load_steps=11 format=2]

[ext_resource path="res://tut/underworld.wav" type="AudioStream" id=1]
[ext_resource path="res://tut/tut.tscn" type="PackedScene" id=2]
[ext_resource path="res://tut/tutmusic.gd" type="Script" id=3]
[ext_resource path="res://take5.wav" type="AudioStream" id=4]
[ext_resource path="res://baroque.wav" type="AudioStream" id=5]
[ext_resource path="res://techno.wav" type="AudioStream" id=6]
[ext_resource path="res://tut/dialog.png" type="Texture" id=7]
[ext_resource path="res://blackround.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font.ttf"

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.952941, 0.92549, 0.760784, 1 )
extra_spacing_space = 5
font_data = SubResource( 2 )

[node name="musicmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blackround" parent="." instance=ExtResource( 8 )]

[node name="dialog" type="Sprite" parent="."]
visible = false
position = Vector2( 520.932, 277.571 )
scale = Vector2( 0.8, 0.286323 )
texture = ExtResource( 7 )

[node name="tut" parent="." instance=ExtResource( 2 )]
margin_left = -1457.66
margin_top = 453.298
margin_right = -1457.66
margin_bottom = 453.298
script = ExtResource( 3 )

[node name="nice1" type="AudioStreamPlayer" parent="tut"]
stream = ExtResource( 5 )

[node name="nice2" type="AudioStreamPlayer" parent="tut"]
stream = ExtResource( 4 )

[node name="nice3" type="AudioStreamPlayer" parent="tut"]
stream = ExtResource( 1 )

[node name="techno" type="AudioStreamPlayer" parent="tut"]
stream = ExtResource( 6 )

[node name="text" type="Label" parent="tut"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1699.54
margin_top = -297.092
margin_right = 2476.54
margin_bottom = -94.0917
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
